# mc-rcon

./: .editorconfig  .gitattributes  .gitignore  .shellcheckrc  AGENTS.md  CLAUDE.md  DEPENDENCY_AUDIT.md  GEMINI.md  Makefile  PERFORMANCE_ANALYSIS.md  PKGBUILD  README.md  justfile  mcrcon-gui-2.py  mcrcon-gui.py  pyproject.toml
.github/: README.md
.github/agents/: python.agent.md
.github/instructions/: python.instructions.md
.github/prompts/: python.prompt.md
aiorcon/: client.py  errors.py
debian/: changelog  copyright  python3-mc-rcon.install  rules
mcrcon_ipv6/: __init__.py  mcrcon.py
mcrconpy/: __init__.py  audit.py  authn.py  cli.py  connection.py  controller.py  core.py  exceptions.py  gui.py  models.py  packet.py  pathclass.py  utils.py  version.py
tests/: __init__.py  test_audit.py  test_models.py  test_packet.py  test_utils.py
