[project]
name = "mc-rcon"
version = "0.0.1"
description = "RCON protocol client for a Minecraft server."
readme = "README.md"
license = { text = "mit" }
keywords = ["rcon", "remote console"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = ["platformdirs (>=4.3.8,<5.0.0)"]
repository = "https://github.com/Ven0m0/mc-rcon"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
orjson = "^3.9.10"
python = "^3.10"
uvloop = { version = "^0.19.0", markers = "sys_platform != 'win32'" }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^0.23.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
mcrcon = "mcrconpy.core:main"
mcrcon-gui = "mcrconpy.gui:main"
