[project]
name = "mc-rcon"
version = "0.0.1"
description = "RCON protocol client for a Minecraft server."
readme = "README.md"
license = { text = "mit" }
keywords = ["rcon", "remote console"]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = ["platformdirs (>=4.3.8,<5.0.0)"]
repository = "https://github.com/Ven0m0/mc-rcon"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
orjson = "^3.9.10"
python = "^3.10"
uvloop = { version = "^0.22.1", markers = "sys_platform != 'win32'" }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^6.0.0"
ruff = "^0.14.8"
mypy = "^1.13.0"
httpx = "^0.28.1"

[tool.poetry.scripts]
mcrcon = "mcrconpy.core:main"
mcrcon-gui = "mcrconpy.gui:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "N818",  # Exception naming (backwards compatibility)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--durations=0 --strict-markers -v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
