[project]
name = "mc-rcon"
version = "0.0.1"
description = "RCON protocol client for a Minecraft server."
readme = "README.md"
license = { text = "MIT" }
keywords = ["rcon", "remote console"]
requires-python = ">=3.10"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["platformdirs>=4.3.8,<5.0.0"]

[project.urls]
Repository = "https://github.com/Ven0m0/mc-rcon"
Issues = "https://github.com/Ven0m0/mc-rcon/issues"

[project.optional-dependencies]
# Performance optimizations (recommended for production use)
perf = [
  "orjson>=3.11.5,<4.0.0",
  "uvloop>=0.22.1,<0.23.0; sys_platform != 'win32'",
]
# Development dependencies
dev = [
  "ruff>=0.14.10",
  "mypy>=1.19.1",
]

[project.scripts]
mcrcon = "mcrconpy.core:main"
mcrcon-gui = "mcrconpy.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcrconpy"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "N818",  # Exception naming (backwards compatibility)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
